--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,44 @@
-@-moz-viewport { width: device-width; scale: 1; }
-@-ms-viewport { width: device-width; scale: 1; }
-@-o-viewport { width: device-width; scale: 1; }
-@-webkit-viewport { width: device-width; scale: 1; }
-@viewport { width: device-width; scale: 1; }
-
 html {
-  box-sizing: border-box;
-  -moz-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  text-size-adjust: 100%;
-  font-family: sans-serif;
+  font-family: "Noto Sans", sans-serif;
+  color: #000;
 }
 
-*, *::before, *::after {
-  box-sizing: inherit;
-}
-
+i {
   font-family: "Noto Sans Japanese", sans-serif;
+}
+
+.btn {
+  color: #005e76;
+  border-color: #8bc9d9;
+  background-color: #fff;
+}
+
+.btn:hover {
+  color: #005e76;
+  background-color: #8bc9d9;
+  border-color: #005e76;
+}
+
+/* .btn-ghost {
+  color: #0084a6;
+  background-color: #fff;
+}
+
+.btn-ghost:hover {
+  color: #005e76;
+  background-color: #fff;
+} */
+
+hr {
+  border-color: #e2e2e2;
+}
+
+.nav a {
+  text-decoration: none;
+  border-bottom: 1px solid #8bc9d9;
+  color: #005e76;
+}
+
+.nav a:hover {
+  border-color: #005e76;
+}
